# ENC28J60-driver

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.zed/: settings.json
enc28j60/: Cargo.toml
enc28j60/src/: lib.rs  macros.rs  register.rs  spi_device.rs
enc28j60/src/adapter/: mod.rs  simple_network.rs
simple-network/: Cargo.toml
simple-network/src/: lib.rs
stm32f4-example/: Cargo.toml  Embed.toml  build.rs  memory.x
stm32f4-example/src/: main.rs
