[workspace]
resolver = "3"
members = ["enc28j60", "stm32f4-example"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.1"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
enc28j60 = { path = "./enc28j60" }
panic-probe = "1"

[workspace.dependencies.stm32f4xx-hal]
version = "0.23"
features = ["stm32f407"]

[profile.release]
lto = true
opt-level = "s"
strip = true
