[package]
name = "stm32f4-example"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.cortex-m-rt]
memory-x = "memory.x"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embedded-hal-bus.workspace = true
enc28j60 = { workspace = true, features = ["simple-network"] }
panic-probe.workspace = true
simple-network.workspace = true
stm32f4xx-hal.workspace = true
